force-app/main/default/objects/Applicant_Details__c/fields/Non_residency_Letter_Valid_Upto__c.field-meta.xml
<CustomField>
    <fullName>Non_residency_Letter_Valid_Upto__c</fullName>
    <label>Non-residency Letter Valid Upto</label>
    <type>Date</type>
</CustomField>