force-app/main/default/objects/Applicant_Details__c/fields/Non_Residency_Letter_Verified__c.field-meta.xml
<CustomField>
    <fullName>Non_Residency_Letter_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Residency Letter Verified</label>
    <type>Checkbox</type>
</CustomField>