force-app/main/default/objects/Applicant_Details__c/fields/Office_Phoner_Number_wcc__c.field-meta.xml
<CustomField>
    <fullName>Office_Phoner_Number_wcc__c</fullName>
    <label>Office Phoner Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>