force-app/main/default/objects/Applicant_Details__c/fields/One_Passport_Size_Color_Photograph__c.field-meta.xml
<CustomField>
    <fullName>One_Passport_Size_Color_Photograph__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Passport Size Color Photograph</label>
    <type>Checkbox</type>
</CustomField>