force-app/main/default/objects/Applicant_Details__c/fields/Organization_Address__c.field-meta.xml
<CustomField>
    <fullName>Organization_Address__c</fullName>
    <label>Office Address</label>
    <type>TextArea</type>
</CustomField>