force-app/main/default/objects/Applicant_Details__c/fields/Organization_Phone_numbers__c.field-meta.xml
<CustomField>
    <fullName>Organization_Phone_numbers__c</fullName>
    <label>Office Phone Number</label>
    <type>Phone</type>
</CustomField>