force-app/main/default/objects/Applicant_Details__c/fields/Pan_Card_Number_of_Authority_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Pan_Card_Number_of_Authority_Signatory__c</fullName>
    <label>Pan Card Number of Authority Signatory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>