force-app/main/default/objects/Applicant_Details__c/fields/Pancard__c.field-meta.xml
<CustomField>
    <fullName>Pancard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pancard</label>
    <type>Checkbox</type>
</CustomField>