force-app/main/default/objects/Applicant_Details__c/fields/Passport_Copy_Details__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy_Details__c</fullName>
    <label>Passport Copy No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>