force-app/main/default/objects/Applicant_Details__c/fields/Passport_Copy_of_Authorized_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy_of_Authorized_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport Copy of Authorized Uploaded</label>
    <type>Checkbox</type>
</CustomField>