force-app/main/default/objects/Applicant_Details__c/fields/PassportNumber__c.field-meta.xml
<CustomField>
    <fullName>PassportNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PassportNumber</label>
    <type>Checkbox</type>
</CustomField>