force-app/main/default/objects/Applicant_Details__c/fields/POA_2_Contact_Number_E__c.field-meta.xml
<CustomField>
    <fullName>POA_2_Contact_Number_E__c</fullName>
    <label>POA 2 Contact Number (E)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>