force-app/main/default/objects/Applicant_Details__c/fields/POA_2_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>POA_2_Email_Id__c</fullName>
    <label>POA 2 Email Id</label>
    <type>Email</type>
</CustomField>