force-app/main/default/objects/Applicant_Details__c/fields/POA_Contact_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>POA_Contact_Country_Code__c</fullName>
    <label>POA Contact Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_With_Codes</valueSetName>
    </valueSet>
</CustomField>