force-app/main/default/objects/Applicant_Details__c/fields/POA_Contact_Number_M__c.field-meta.xml
<CustomField>
    <fullName>POA_Contact_Number_M__c</fullName>
    <label>POA Contact Number (M)</label>
    <type>TextArea</type>
</CustomField>