force-app/main/default/objects/Applicant_Details__c/fields/POA_Email_Id_E__c.field-meta.xml
<CustomField>
    <fullName>POA_Email_Id_E__c</fullName>
    <label>POA Email Id (E)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>