force-app/main/default/objects/Applicant_Details__c/fields/POA_Email_Id_M__c.field-meta.xml
<CustomField>
    <fullName>POA_Email_Id_M__c</fullName>
    <label>POA Email Id (M)</label>
    <type>TextArea</type>
</CustomField>