force-app/main/default/objects/Applicant_Details__c/fields/POA_Nationality__c.field-meta.xml
<CustomField>
    <fullName>POA_Nationality__c</fullName>
    <label>POA Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nationality_Set</valueSetName>
    </valueSet>
</CustomField>