force-app/main/default/objects/Applicant_Details__c/fields/Power_of_Attorney_Details__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_Details__c</fullName>
    <label>Power of Attorney Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>