force-app/main/default/objects/Applicant_Details__c/fields/Power_of_Attorney_Valid_Upto__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_Valid_Upto__c</fullName>
    <label>Power of Attorney Valid Upto</label>
    <type>Date</type>
</CustomField>