force-app/main/default/objects/Applicant_Details__c/fields/Primary_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile_Number__c</fullName>
    <label>Primary Mobile Number</label>
    <type>Phone</type>
</CustomField>