force-app/main/default/objects/Applicant_Details__c/fields/Registration_License_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Registration_License_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration License Uploaded</label>
    <type>Checkbox</type>
</CustomField>