force-app/main/default/objects/Applicant_Details__c/fields/Relationship_Executive__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Executive__c</fullName>
    <description>Name of the executive</description>
    <label>Relationship Executive</label>
    <length>250</length>
    <type>Text</type>
</CustomField>