force-app/main/default/objects/Applicant_Details__c/fields/Resale_Process__c.field-meta.xml
<CustomField>
    <fullName>Resale_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resale Process</label>
    <referenceTo>Resale_Process__c</referenceTo>
    <relationshipLabel>ApplicantDetails</relationshipLabel>
    <relationshipName>ApplicantDetails</relationshipName>
    <type>Lookup</type>
</CustomField>