force-app/main/default/objects/Applicant_Details__c/fields/Secondary_Contact_Number_M__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Number_M__c</fullName>
    <label>Secondary Contact Number (M)</label>
    <type>TextArea</type>
</CustomField>