force-app/main/default/objects/Applicant_Details__c/fields/Secondary_Contact_Number_wcc__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Number_wcc__c</fullName>
    <label>Secondary Contact Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>