force-app/main/default/objects/Applicant_Details__c/fields/Secondary_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_Number__c</fullName>
    <label>Alternate Mobile Number</label>
    <type>Phone</type>
</CustomField>