force-app/main/default/objects/Applicant_Details__c/fields/Self_attested_List_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Self_attested_List_of_Directors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self-attested List of Directors</label>
    <type>Checkbox</type>
</CustomField>