force-app/main/default/objects/Applicant_Details__c/fields/Seller_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Seller_Percentage__c</fullName>
    <label>Seller Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>