force-app/main/default/objects/Applicant_Details__c/fields/SPA_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Sent_Date__c</fullName>
    <formula>Booking__r.SPA_Sent_Date__c</formula>
    <label>SPA Sent Date</label>
    <type>Date</type>
</CustomField>