force-app/main/default/objects/Applicant_Details__c/fields/Subtype_Of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Subtype_Of_Applicant__c</fullName>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Of_Applicant__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Companies incorporated in permitted jurisdictions</fullName>
            </value>
            <value>
                <fullName>UAE Resident</fullName>
            </value>
            <value>
                <fullName>Non-UAE Resident</fullName>
            </value>
            <value>
                <fullName>Companies incorporated in the UAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>