force-app/main/default/objects/Applicant_Details__c/fields/Trade_License_Verified__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade License Verified</label>
    <type>Checkbox</type>
</CustomField>