force-app/main/default/objects/Applicant_Details__c/fields/Type_Of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Applicant__c</fullName>
    <label>Type Of Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual Purchaser</fullName>
            </value>
            <value>
                <fullName>Corporate Purchaser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>