force-app/main/default/objects/Applicant_Details__c/fields/Unique_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Customer_ID__c</fullName>
    <label>Unique Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>