force-app/main/default/objects/Applicant_Details__c/fields/Valid_Upto_Emirates_Id__c.field-meta.xml
<CustomField>
    <fullName>Valid_Upto_Emirates_Id__c</fullName>
    <label>Valid Upto Emirates Id</label>
    <type>Date</type>
</CustomField>