force-app/main/default/objects/Applicant_Details__c/fields/Visa_copy_of_Authorized_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Visa_copy_of_Authorized_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa copy of Authorized Uploaded</label>
    <type>Checkbox</type>
</CustomField>