force-app/main/default/objects/Applicant_Details__c/validationRules/Authorized_Signatory2_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Authorized_Signatory2_Phone_Validation</fullName>
    <active>true</active>
    <description>Authorized Signatory Phone Validation</description>
    <errorConditionFormula>IF( Authorized_Signatory_2__c &lt;&gt; null ,  IF( Authorized_Signatory2_Phone__c = null, true, false) , false)</errorConditionFormula>
    <errorDisplayField>Authorized_Signatory2_Phone__c</errorDisplayField>
    <errorMessage>Phone number required for Authorized Signatory2</errorMessage>
</ValidationRule>