force-app/main/default/objects/Applicant_Details__c/validationRules/Authorized_Signatory_3_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Authorized_Signatory_3_Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Authorized_Signatory_3__c &lt;&gt; null, IF(Authorized_Signatory_2__c=null, true, false), false)</errorConditionFormula>
    <errorDisplayField>Authorized_Signatory_2__c</errorDisplayField>
    <errorMessage>Email ID is Required</errorMessage>
</ValidationRule>