force-app/main/default/objects/Applicant_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_Of_Applicant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>